<resources>
    <string name="app_name">CheckEquation</string>
    <string name="equationText">Итого проверено примеров</string>
    <string name="zeoForScors">0</string>
    <string name="correctText">Правильно</string>
    <string name="wrongText">Неправильно</string>
    <string name="zeroPercents">0.00%</string>
    <string name="tmpOperand1">00</string>
    <string name="tmpOperation">+</string>
    <string name="equalitiCharacter">=</string>
    <string name="typiHint">00</string>
    <string name="CheckText">Далее</string>
    <string name="StartText">Начать</string>
    <string name="CorrectAnswer">Верно</string>
    <string name="WrongAswer">Неверно</string>
</resources>